# role-roll

./: .gitignore  Procfile  README.md  logger.py  main.py  pyproject.toml  run.sh  sample.json  tasker.py
src/: client.py  commands.py  request.py
src/dps/: command.py
src/lib/: pups.py  redis.py  tinydb.py
src/me/: command.py
src/register/: command.py
src/roll/: command.py  commands.py  dps.py  request.py
tasks/: fetcher.py
