[tool.poetry]
name = "role-roll"
version = "0.1.0"
description = ""
authors = ["TheBoringDude <iamcoderx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
"discord.py" = "^1.7.3"
pylint = "^2.9.3"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^3.9.2"
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
